# coreason-scribe

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: index.md  product_requirements.md  requirements.md  usage.md  vignette.md
src/coreason_scribe/: __init__.py  decorators.py  delta.py  inspector.py  main.py  matrix.py  models.py  pdf.py  server.py  signer.py
src/coreason_scribe/templates/: sds.html
src/coreason_scribe/templates/css/: style.css
src/coreason_scribe/utils/: __init__.py  logger.py
tests/: conftest.py  test_decorators.py  test_delta.py  test_delta_edge_cases.py  test_delta_verification.py  test_delta_verification_complex.py  test_edge_cases_complex.py  test_gate_complex.py  test_identity_aware.py  test_inspector.py  test_inspector_complex.py  test_inspector_complex_scenarios.py  test_inspector_edge_cases.py  test_inspector_trace.py  test_main.py  test_matrix.py  test_matrix_mermaid.py  test_matrix_mermaid_edge_cases.py  test_matrix_visualization.py  test_matrix_visualization_complex.py  test_models.py  test_pdf.py  test_pdf_edge_cases.py  test_server.py  test_signer.py  test_traceability_edge_cases.py  test_traceability_ingestion.py  test_utils.py  test_utils_coverage.py
